// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AWSLoadBalancerProvider where there is a load balancer creates load balancer 1`] = `
[
  [
    {
      "entities": [
        {
          "entity": {
            "apiVersion": "backstage.io/v1beta1",
            "kind": "Resource",
            "metadata": {
              "annotations": {
                "amazonaws.com/load-balancer-arn": "arn:aws:elasticloadbalancing:eu-west-1:123456789012:loadbalancer/app/my-load-balancer/50dc6c495c0c9188",
                "amazonaws.com/load-balancer-dns-name": "my-load-balancer-1234567890.eu-west-1.elb.amazonaws.com",
                "backstage.io/managed-by-location": "aws-load-balancer-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/managed-by-origin-location": "aws-load-balancer-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/view-url": "https://eu-west-1.console.aws.amazon.com/ec2/home?region=eu-west-1#LoadBalancers:loadBalancerId=50dc6c495c0c9188;sort=loadBalancerName",
              },
              "availabilityZones": "eu-west-1a, eu-west-1b",
              "dnsName": "my-load-balancer-1234567890.eu-west-1.elb.amazonaws.com",
              "labels": {
                "Environment": "production--staging",
                "owner": "team-platform",
              },
              "name": "my-load-balancer",
              "scheme": "internet-facing",
              "state": "active",
              "title": "my-load-balancer",
              "type": "application",
              "vpcId": "vpc-12345678",
            },
            "spec": {
              "owner": "team-platform",
              "type": "load-balancer",
            },
          },
          "locationKey": "aws-load-balancer-provider-0",
        },
      ],
      "type": "full",
    },
  ],
]
`;

exports[`AWSLoadBalancerProvider where there is a load balancer creates load balancer with a template 1`] = `
[
  [
    {
      "entities": [
        {
          "entity": {
            "apiVersion": "backstage.io/v1beta1",
            "kind": "Resource",
            "metadata": {
              "annotations": {
                "amazonaws.com/load-balancer-arn": "arn:aws:elasticloadbalancing:eu-west-1:123456789012:loadbalancer/app/my-load-balancer/50dc6c495c0c9188",
                "amazonaws.com/load-balancer-dns-name": "my-load-balancer-1234567890.eu-west-1.elb.amazonaws.com",
                "backstage.io/managed-by-location": "aws-load-balancer-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/managed-by-origin-location": "aws-load-balancer-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/view-url": "https://eu-west-1.console.aws.amazon.com/ec2/home?region=eu-west-1#LoadBalancers:loadBalancerId=;sort=loadBalancerName",
                "custom/template-marker": "custom-value",
              },
              "dnsName": "my-load-balancer-1234567890.eu-west-1.elb.amazonaws.com",
              "name": "my-load-balancer",
              "scheme": "internet-facing",
              "state": "active",
              "title": "my-load-balancer",
              "type": "application",
              "vpcId": "vpc-12345678",
            },
            "spec": {
              "type": "load-balancer",
            },
          },
          "locationKey": "aws-load-balancer-provider-0",
        },
      ],
      "type": "full",
    },
  ],
]
`;
